Bug 39066 - Hyperlinks are missing after closing
Summary: Hyperlinks are missing after closing
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
3.3.0 release
Hardware: x86 (IA32) All
: high critical
Assignee: Christina Rossmanith
URL:
Whiteboard: target:4.1.0 target:3.6.7 target:4.0.3
Keywords:
Depends on:
Blocks: mab3.6
  Show dependency treegraph
 
Reported: 2011-07-08 04:55 UTC by Edmund Laugasson
Modified: 2013-04-10 08:48 UTC (History)
8 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file, where is one image, link is set but after saving and reopening the link is missing. (42.28 KB, application/vnd.oasis.opendocument.graphics)
2011-07-08 04:55 UTC, Edmund Laugasson
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Edmund Laugasson 2011-07-08 04:55:23 UTC
Created attachment 48890 [details]
Example file, where is one image, link is set but after saving and reopening the link is missing.

Steps to reproduce:
1. Open LibreOffice Draw
2. Add some images - no matter in which format. Usually copy from Google image search using Firefox 5.x
3. Activate image and click Hyperlink button at toolbar.
4. Add the hyperlink, apply and close
5. Save the file
6. Close the file
7. Reopen the file
8. Links are gone - no one link at images set before closing.

I would say, that links in text remains but links under images are missing after saving-reopening.

I created poster with tens of logos and set links and after reopening I should now do all image links again... I would like to use links, because in PDF export they are clickable on the web using Google Docs Viewer.

Somehow also CTRL+V didn't work in that dialog, where I should put the link onto target field. After closing program this worked again...

Using Ubuntu 10.04 LTS + all current updates. LibreOffice is 3.3.3, 32-bit DEB-version.
Comment 1 Edmund Laugasson 2011-07-08 05:08:47 UTC
It seems like in Writer this works - I created file with same logo and after saving-reopening the hyperlink still works.
Comment 2 Edmund Laugasson 2011-07-08 05:27:11 UTC
But hyperimage does not work in Writer - no matter I activate those areas or not and no matter - click I in Writer or exported PDF...
Comment 3 Jean-Baptiste Faure 2011-07-09 23:07:10 UTC
Are you sure that your hyperlink works before you save your file (step 4) ?
Hyperlink on images works in Impress.
Comment 4 Edmund Laugasson 2011-07-10 09:35:41 UTC
Yes, I'm sure, that hyperlinks worked - I created .odg file, exported it into PDF and uploaded to web. All links worked. At the same time Draw were opened all the time - I didn't close it before or after PDF export. Then I discovered, that some images needs to be added also with hyperlinks - then I discovered, that images with links created before reopening, are missing. Links are there until I close the file. But I had power failure due local energy provider fault (thunderstorm started fire at local power substation, fortunately no casualties - only material damages) and therefore I needed to close PC, because power failure duration were longer than my 550VA UPS could handle. If there wasn't any power failure - perhaps I didn't discover current 39066 bug.
Comment 5 Jeffrey 2011-07-10 19:37:22 UTC
Confirmed for LibreOffice 3.4  340m1(Build:12) on OpenSuse KDE.

Hyperlinked images work fine on Writer, Calc, and Impress. After you apply the link, close the file and open it again, the link is still there. Hyperlinked images fail on Draw. After closing and opening the file again, the hyperlink is gone. Link still exists before step 4.
Comment 6 Björn Michaelsen 2011-12-23 12:29:36 UTC
[This is an automated message.]
This bug was filed before the changes to Bugzilla on 2011-10-16. Thus it
started right out as NEW without ever being explicitly confirmed. The bug is
changed to state NEEDINFO for this reason. To move this bug from NEEDINFO back
to NEW please check if the bug still persists with the 3.5.0 beta1 or beta2 prereleases.
Details on how to test the 3.5.0 beta1 can be found at:
http://wiki.documentfoundation.org/QA/BugHunting_Session_3.5.0.-1

more detail on this bulk operation: http://nabble.documentfoundation.org/RFC-Operation-Spamzilla-tp3607474p3607474.html
Comment 7 sasha.libreoffice 2012-01-27 09:35:21 UTC
reproduced in LibO 3.6.0 master on Fedora 64 bit
Comment 8 Florian Reisinger 2012-03-25 07:23:24 UTC
Changed version to master and changed importance
Comment 9 sasha.libreoffice 2012-03-26 01:08:03 UTC
@ Florian Reisinger
Sorry, but "Version" means most early version where bug reproducible, not current version of LO.
Changing again to 3.3.0
Comment 10 jim.librebugs 2012-07-04 17:17:44 UTC
Reproduced on Mac OSX 3.5. Hyperlink works before saving is gone after saving.
Comment 11 f.g.b 2012-11-05 17:31:57 UTC
Can confirm with 3.6.0.4 on Windows XP.

A possible workaround: Because I need this feature and have do redo an hours work I tested Apache OpenOffice 3.4.1 and this feature works.

Some testing: If I open a file with a link from Apache OpenOffice in LibreOffice the link is not shown. If I save the file (unchanged) to another name with LibreOffice the link is also gone under Apache OpenOffice.
Comment 12 sasha.libreoffice 2012-11-06 07:42:56 UTC
@ Thorsten
Greetings
What do You think about this bug? Here content of document is silently lost during saving/loading. May be it is candidate to MAB or something like this.
Comment 13 Commit Notification 2013-04-10 08:40:47 UTC
Chr. Rossmanith committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=7bcba4c910fa7eecf256a05a1f274f7b253e5fc5

fdo#39066: using UNO_QUERY instead of UNO_QUERY_THROW displays hyperlinks



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 14 Caolán McNamara 2013-04-10 08:46:06 UTC
Now that Christina has fixed it (thanks!), it appears to be a regression from 0b21b8b146fc4b982c7c9bbb866b9ff18a29332a various backports currently on-review in gerrit for 4-0 and 3-6
Comment 15 Commit Notification 2013-04-10 08:48:25 UTC
Chr. Rossmanith committed a patch related to this issue.
It has been pushed to "libreoffice-3-6":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=1a29c1bb23f76ba3799dc2a77b4f678ca0ad109d&h=libreoffice-3-6

fdo#39066: using UNO_QUERY instead of UNO_QUERY_THROW displays hyperlinks


It will be available in LibreOffice 3.6.7.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 16 Commit Notification 2013-04-10 08:48:45 UTC
Chr. Rossmanith committed a patch related to this issue.
It has been pushed to "libreoffice-4-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=d2bf6a3951ee46e83798cf7cb89849ebd2e32416&h=libreoffice-4-0

fdo#39066: using UNO_QUERY instead of UNO_QUERY_THROW displays hyperlinks


It will be available in LibreOffice 4.0.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.