fdo#39066: using UNO_QUERY instead of UNO_QUERY_THROW displays hyperlinks

Change-Id: Iafa9e273c009fe0772a9401b47b51738dc235a13